--- a/lab-oop_in_python.ipynb
+++ b/lab-oop_in_python.ipynb
@@ -32,18 +32,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "240 18\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
     "class Vehicle:\n",
-    "    # Hint: Define __init__ method with parameters for max_speed and mileage\n",
-    "    pass\n",
+    "    def __init__(self, max_speed, mileage):\n",
+    "        self.max_speed = max_speed\n",
+    "        self.mileage = mileage\n",
     "\n",
     "# Example instantiation\n",
-    "modelX = Vehicle()  # Create an instance of Vehicle\n",
+    "modelX = Vehicle(240, 18)  # Create an instance of Vehicle with max_speed 240 and mileage 18\n",
     "\n",
     "# Print attributes\n",
-    "print(modelX.max_speed, modelX.mileage)  # Expected output: (value of max_speed, value of mileage)"
+    "print(modelX.max_speed, modelX.mileage)  # Expected output: 240 18"
    ]
   },
   {
@@ -68,7 +76,6 @@
     }
    ],
    "source": [
-    "# Your code here\n",
     "class Vehicle:\n",
     "    pass\n",
     "\n",
@@ -99,7 +106,9 @@
     }
    ],
    "source": [
-    "# Your code here\n",
+    "class Vehicle:\n",
+    "    pass\n",
+    "\n",
     "class Bus(Vehicle):\n",
     "    pass\n",
     "\n",
@@ -125,19 +134,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Base fare\n"
+      "Base fare with extra charge\n"
      ]
     }
    ],
    "source": [
-    "# Your code here\n",
     "class Vehicle:\n",
     "    def fare(self):\n",
     "        return \"Base fare\"\n",
     "\n",
     "class Bus(Vehicle):\n",
-    "    # Hint: Override fare method to include extra charges\n",
-    "    pass\n",
+    "    def fare(self):\n",
+    "        return \"Base fare with extra charge\"\n",
     "\n",
     "school_bus = Bus()\n",
     "print(school_bus.fare())  # Expected output: \"Base fare with extra charge\""
@@ -165,9 +173,8 @@
     }
    ],
    "source": [
-    "# Your code here\n",
     "class Vehicle:\n",
-    "    color = \"White\"  # Hint: Define color as a class attribute\n",
+    "    color = \"White\"  # Class attribute\n",
     "\n",
     "    def __init__(self, name, max_speed, mileage):\n",
     "        self.name = name\n",
@@ -195,12 +202,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Bus fare is: 5000\n"
+      "Total Bus fare is: 5500.0\n"
      ]
     }
    ],
    "source": [
-    "# Your code here\n",
     "class Vehicle:\n",
     "    def __init__(self, name, mileage, capacity):\n",
     "        self.name = name\n",
@@ -211,11 +217,14 @@
     "        return self.capacity * 100\n",
     "\n",
     "class Bus(Vehicle):\n",
-    "    # Hint: Override fare method to include maintenance charge\n",
-    "    pass\n",
+    "    def fare(self):\n",
+    "        base_fare = super().fare()\n",
+    "        maintenance_charge = base_fare * 0.10\n",
+    "        total_fare = base_fare + maintenance_charge\n",
+    "        return total_fare\n",
     "\n",
     "school_bus = Bus(\"School Volvo\", 12, 50)\n",
-    "print(\"Total Bus fare is:\", school_bus.fare())  # Expected output: Total Bus fare is: (calculated amount)"
+    "print(\"Total Bus fare is:\", school_bus.fare())  # Expected output: Total Bus fare is: 5500.0"
    ]
   },
   {
@@ -240,7 +249,6 @@
     }
    ],
    "source": [
-    "# Your code here\n",
     "school_bus = Bus(\"School Volvo\", 12, 50)\n",
     "print(type(school_bus))  # Expected output: <class '__main__.Bus'>"
    ]
@@ -255,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +295,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -301,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
